--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,3 +1,7 @@
 django==3.2.9
-mysqlclient==1.3.14
+django-filter=21.1
+django-filters=0.2.1
+django-utils-six=2.0
+djangorestframework=3.12.4
+djangorestframework-filters=0.11.1
 gunicorn==20.1.0
