--- a/mini-frontend/manifest.json
+++ b/mini-frontend/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name" : "testapp",
-    "appid" : "",
+    "name" : "ZijingGuest",
+    "appid" : "__UNI__748F835",
     "description" : "",
     "versionName" : "1.0.0",
     "versionCode" : "100",
@@ -55,8 +55,8 @@
             "postcss" : true
         },
         "usingComponents" : true,
-        "useExtendedLib": {
-            "weui": true
+        "useExtendedLib" : {
+            "weui" : true
         }
     },
     "vueVersion" : "2"
