change submit form logic

--- a/mini-frontend/manifest.json
+++ b/mini-frontend/manifest.json
@@ -49,7 +49,7 @@
     /* 快应用特有相关 */
     "mp-weixin" : {
         /* 小程序特有相关 */
-        "appid" : "wxd658ab1f82314e2a",
+        "appid" : "wxb628d9e8ab4ac444",
         "setting" : {
             "urlCheck" : false,
             "postcss" : true
