--- a/mini-frontend/package.json
+++ b/mini-frontend/package.json
@@ -8,8 +8,5 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "crypto-js": "^3.3.0"
-  }
+  "license": "ISC"
 }
