--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -10,3 +10,8 @@ pyOpenSSL==19.0.0
 pycryptodome==3.11.0
 gunicorn==20.1.0
 channels==3.0.4
+PyMySQL==1.0.2
+django-sslserver==0.22
+django-redis==5.0.0
+drf-yasg==1.20.0
+pycryptodome==3.11.0
