--- a/mini-frontend/uni_modules/uni-scss/package.json
+++ b/mini-frontend/uni_modules/uni-scss/package.json
@@ -1,26 +1,21 @@
 {
-  "id": "uni-transition",
-  "displayName": "uni-transition 过渡动画",
-  "version": "1.3.1",
-  "description": "元素的简单过渡动画",
+  "id": "uni-scss",
+  "displayName": "uni-scss 辅助样式",
+  "version": "1.0.2",
+  "description": "uni-sass是uni-ui提供的一套全局样式 ，通过一些简单的类名和sass变量，实现简单的页面布局操作，比如颜色、边距、圆角等。",
   "keywords": [
+    "uni-scss",
     "uni-ui",
-    "uniui",
-    "动画",
-    "过渡",
-    "过渡动画"
+    "辅助样式"
 ],
   "repository": "https://github.com/dcloudio/uni-ui",
   "engines": {
-    "HBuilderX": ""
-  },
-  "directories": {
-    "example": "../../temps/example_temps"
+    "HBuilderX": "^3.1.0"
   },
   "dcloudext": {
     "category": [
-      "前端组件",
-      "通用组件"
+        "uni-app前端模板",
+        "前端页面模板"
     ],
     "sale": {
       "regular": {
@@ -41,7 +36,7 @@
     "npmurl": "https://www.npmjs.com/package/@dcloudio/uni-ui"
   },
   "uni_modules": {
-    "dependencies": ["uni-scss"],
+    "dependencies": [],
     "encrypt": [],
     "platforms": {
       "cloud": {
@@ -51,7 +46,7 @@
       "client": {
         "App": {
           "app-vue": "y",
-          "app-nvue": "y"
+          "app-nvue": "u"
         },
         "H5-mobile": {
           "Safari": "y",
@@ -74,8 +69,8 @@
           "QQ": "y"
         },
         "快应用": {
-          "华为": "u",
-          "联盟": "u"
+          "华为": "n",
+          "联盟": "n"
         },
         "Vue": {
             "vue2": "y",
