--- a/mini-frontend/uni_modules/uni-collapse/package.json
+++ b/mini-frontend/uni_modules/uni-collapse/package.json
@@ -1,7 +1,7 @@
 {
   "id": "uni-collapse",
   "displayName": "uni-collapse 折叠面板",
-  "version": "1.3.3",
+  "version": "1.4.1",
   "description": "Collapse 组件，可以折叠 / 展开的内容区域。",
   "keywords": [
     "uni-ui",
@@ -41,6 +41,7 @@
   },
   "uni_modules": {
     "dependencies": [
+			"uni-scss",
       "uni-icons"
     ],
     "encrypt": [],
