--- a/mini-frontend/uni_modules/uni-combox/package.json
+++ b/mini-frontend/uni_modules/uni-combox/package.json
@@ -1,7 +1,7 @@
 {
   "id": "uni-combox",
   "displayName": "uni-combox 组合框",
-  "version": "0.1.0",
+  "version": "1.0.1",
   "description": "可以选择也可以输入的表单项 ",
   "keywords": [
     "uni-ui",
@@ -42,6 +42,7 @@
   },
   "uni_modules": {
     "dependencies": [
+			"uni-scss",
 			"uni-icons"
 		],
     "encrypt": [],
