--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -6,7 +6,10 @@ services:
     command: >
       bash -c
       "
-      gunicorn -w4 -b :5000 --log-level=debug manage:app"
+      python manage.py collectstatic --no-input &&
+      python manage.py migrate &&
+      python manage.py runserver 0.0.0.0:5000
+      "
     volumes:
       - .:/code
     container_name: app
