--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "axios": "0.18.1",
     "core-js": "3.6.5",
+    "echarts": "^5.2.2",
     "element-ui": "2.13.2",
     "js-cookie": "2.2.0",
     "moment": "^2.29.1",
@@ -23,9 +24,11 @@
     "nprogress": "0.2.0",
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
+    "vue-count-to": "^1.0.13",
     "vue-router": "3.0.6",
     "vuedraggable": "^2.24.3",
-    "vuex": "3.1.0"
+    "vuex": "3.1.0",
+    "xlsx": "^0.17.4"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "4.4.4",
