--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -25,6 +25,7 @@
     "path-to-regexp": "2.4.0",
     "vue": "2.6.10",
     "vue-count-to": "^1.0.13",
+    "vue-json-excel": "^0.3.0",
     "vue-router": "3.0.6",
     "vuedraggable": "^2.24.3",
     "vuex": "3.1.0",
