--- a/web-frontend/package.json
+++ b/web-frontend/package.json
@@ -18,6 +18,7 @@
     "core-js": "3.6.5",
     "echarts": "^5.2.2",
     "element-ui": "2.13.2",
+    "file-saver": "^2.0.5",
     "js-cookie": "2.2.0",
     "moment": "^2.29.1",
     "normalize.css": "7.0.0",
