--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -5,6 +5,6 @@ ENV PYTHONUNBUFFERED 1
 RUN mkdir /code
 WORKDIR /code
 RUN pip install pip -U -i https://pypi.tuna.tsinghua.edu.cn/simple
-ADD requirements.txt /code/
+ADD ./backend/requirements.txt /code/
 RUN pip install -r requirements.txt -i https://pypi.tuna.tsinghua.edu.cn/simple
 ADD . /code/
