--- a/.gitignore
+++ b/.gitignore
@@ -132,4 +132,8 @@ dmypy.json
 node_modules
 unpackage
 
-/migrations
+log/migrations/
+guest/migrations/
+guard/migrations/
+dorm/migrations/
+api/migrations/
