--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,7 +1,13 @@
 server {
-    listen       8080;
+    listen       5000 ssl;
+    listen       443 ssl;
     server_name  49.232.106.46;
 
+    ssl_certificate /code/Zijing-Guest/backend/certificate.crt;
+    ssl_certificate_key /code/Zijing-Guest/backend/certificate.key;
+    ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE:ECDH:AES:HIGH:!NULL:!aNULL:!MD5:!ADH:!RC4;
+    ssl_prefer_server_ciphers on;
     #charset koi8-r;
     #access_log  /var/log/nginx/host.access.log  main;
     location / {
